# paire-deep-psma-submission

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: code-quality.yml
reports/: references.bib  submission.Rmd
scripts/: 00_export_dataset_data.py  00_export_splits.py  01_preprocess.py  01a_preprocess_baseline.py  01b_preprocess_with_organs.py  02_plan.py  02_train.py  03a_inference_baseline.py  03b_inference_with_organs.py  04_evaluate.py  evaluate.py  schedule_801.sh  schedule_802.sh  schedule_901.sh  schedule_902.sh  schedule_911-fold3.sh  schedule_912-fold3.sh  schedule_912.sh  schedule_exp802.sh  schedule_exp902.sh
src/paire_deep_psma_submission/: cli.py  config.py  inference.py  model.py  postprocessing.py  postprocessing_utils.py  transforms.py  utils.py
